Particle Instances ignores Group offsets #36625

Closed
opened 2013-09-01 08:01:52 +02:00 by chaos · 3 comments
Member

%%%Similar to my last bug report, but I think this is not related to that one.
I try to Instance a Particle Group and then create an origin offset for it. This is useful when importing the Group onto another file, or even re-using the instance in the same file, but Blender fails when updating the particles position.
Open the file and render an image. You should get a Plane in the center with a bunch of particles, but to the right, some floating particles, and a plane with the icosphere offseted from particles (This is an instance. They should be in the same place)

  1. Create a Plane
  2. Create an icosphere, edit-mode scaled down.
  3. Add a Particle System to the plane.
  4. Set the system to be hair, produce 100 particles
  5. With Plane and Icosphere selected, assign them to a group (Ctrl+G)
  6. Create an instance from Ctrl+A menu
  7. Grab the Instanced Group to the right. If we render, we get the objects instances appropriately in place.
  8. Go to Object Context, and in Groups, create a random offset for origin. Render again. We get the particles in the center of the Group as if the offset don't exists. The other objects don't have this problem and they work well; that's the plane and the Icosphere.

This is a must-have tool. Many times, when creating instances I need to re-center the origin to establish good pivot points for scaling and rotating in animation.

Kind Regards.

System Specs:
Blender 2.68a (r58536)
RAM: 2GB
CPU: AMD Athlon X2 4800+
GFX: Nvidia GeForce 8400GS
Driver: 310.14
OS: LinuxMint 14 64 bits%%%

%%%Similar to my last bug report, but I think this is not related to that one. I try to Instance a Particle Group and then create an origin offset for it. This is useful when importing the Group onto another file, or even re-using the instance in the same file, but Blender fails when updating the particles position. Open the file and render an image. You should get a Plane in the center with a bunch of particles, but to the right, some floating particles, and a plane with the icosphere offseted from particles (This is an instance. They should be in the same place) 1) Create a Plane 2) Create an icosphere, edit-mode scaled down. 3) Add a Particle System to the plane. 4) Set the system to be hair, produce 100 particles 5) With Plane and Icosphere selected, assign them to a group (Ctrl+G) 6) Create an instance from Ctrl+A menu 7) Grab the Instanced Group to the right. If we render, we get the objects instances appropriately in place. 8) Go to Object Context, and in Groups, create a random offset for origin. Render again. We get the particles in the center of the Group as if the offset don't exists. The other objects don't have this problem and they work well; that's the plane and the Icosphere. This is a must-have tool. Many times, when creating instances I need to re-center the origin to establish good pivot points for scaling and rotating in animation. Kind Regards. System Specs: Blender 2.68a (r58536) RAM: 2GB CPU: AMD Athlon X2 4800+ GFX: Nvidia GeForce 8400GS Driver: 310.14 OS: LinuxMint 14 64 bits%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60230.%%%

%%%fixed r60230.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36625
No description provided.